--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -60,7 +60,7 @@
                         {% for x in v %}
                         <tr>
                             <td>{{ x.status_date }}</td>
-                            <td>{{ x.type|capfirst }} {{ x.status.status_name }}.</td>
+                            <td>{{ x.status.status_name|capfirst }}.</td>
                         </tr>
                         {% endfor %}
                     </table>
