Updated website full name.

--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -14,7 +14,7 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <h1>Database of Systematic Phenotypes in Yeast <small>beta version</small></h1>
+            <h1>Database of Systematic Phenotypic Screens in Yeast <small>beta version</small></h1>
         </div>
     </div>
 
