Added citation policy to the about page.

--- a/templates/yeastphenome/about.html
+++ b/templates/yeastphenome/about.html
@@ -47,6 +47,12 @@
                 <li>Mark Schroeder (server support)</li>
             </ul>
 
+            <h2>Data usage and citation policy</h2>
+            If you use yeast phenome data in a talk or a manuscript, please acknowledge the data source by citing the original publication and the yeast phenome database.
+            <p>The database should be cited as follows:
+            <blockquote>Database of Systematic Phenotypic Screens in Yeast, www.yeastphenome.org, accessed on XXXX-XX-XX.</blockquote>
+
+
             <h2>Current stats</h2>
 
             <ul>
