Added medium to datasets and made a few other changes to admin site

--- a/datasets/templates/datasets/detail.html
+++ b/datasets/templates/datasets/detail.html
@@ -35,6 +35,10 @@
                     <td>{{ dataset.conditionset.link_detail|safe }}</td>
                 </tr>
                 <tr>
+                    <th scope="row">Medium</th>
+                    <td>{{ dataset.medium.link_detail|safe }}</td>
+                </tr>
+                <tr>
                     <th scope="row">Collection</th>
                     <td>{{ dataset.collection.name }}</td>
                 </tr>
