A few changes to the reporting of the medium/ref condition

--- a/datasets/templates/datasets/detail.html
+++ b/datasets/templates/datasets/detail.html
@@ -35,7 +35,7 @@
                     <td>{{ dataset.conditionset.link_detail|safe }}</td>
                 </tr>
                 <tr>
-                    <th scope="row">Medium</th>
+                    <th scope="row">Reference condition</th>
                     <td>{{ dataset.medium.link_detail|safe }}</td>
                 </tr>
                 <tr>
