Added the Datasets page and the first special class of datasets (growth in rich/min media)

--- a/datasets/templates/datasets/datasets_table.html
+++ b/datasets/templates/datasets/datasets_table.html
@@ -21,10 +21,10 @@
 
         <thead>
         <td style="text-align: left;"><input type="checkbox" onClick="toggle(this)"></td>
-        <th>Papers</th>
+        <th>Paper</th>
         <th>Phenotype</th>
         <th>Condition</th>
-        <th>Reference condition</th>
+        <th>Reference</th>
         <th>Collection</th>
         <th>Tested mutants</th>
         <th>Data</th>
