--- a/templates/yeastphenome/about.html
+++ b/templates/yeastphenome/about.html
@@ -49,7 +49,7 @@
 
             <h2>Data usage and citation policy</h2>
             If you use yeast phenome data in a talk or a manuscript, please acknowledge the data source by citing the original publication from which the data is derived, as well as the yeast phenome database. The database should be cited as follows:</p>
-            <p>&mdash; Database of Systematic Phenotypic Screens in Yeast, www.yeastphenome.org, accessed on XXXX-XX-XX.</p>
+            <p>&mdash; The Yeast Phenome Database, www.yeastphenome.org, accessed on XXXX-XX-XX.</p>
 
 
             <h2>Current stats</h2>
