Added the special list of datasets that involve human proteins

--- a/datasets/templates/datasets/index.html
+++ b/datasets/templates/datasets/index.html
@@ -13,9 +13,10 @@
 
     <h1>Datasets</h1>
 
-    <h3>Dataset lists of particular interest</h3>
+    <h3>List of datasets of particular interest</h3>
     <ul>
         <li><a href="/datasets/class/growth/">Growth in rich or minimal media</a></li>
+        <li><a href="/datasets/class/human/">Expression of a human protein</a></li>
     </ul>
 
     {% include "footer.html" %}
