--- a/templates/yeastphenome/about.html
+++ b/templates/yeastphenome/about.html
@@ -52,14 +52,17 @@
             <p>&mdash; The Yeast Phenome Database, www.yeastphenome.org, accessed on XXXX-XX-XX.</p>
 
 
-            <h2>Current stats</h2>
+            <h2>Current stats ({{ updated_on }})</h2>
 
             <ul>
                 <li>Total publications: {{ papers_nr|intcomma }} (+ {{ papers_hopeless_nr|intcomma }} for which data could not be recovered)</li>
-                <li>Publications with data loaded: {{ papers_processed_nr|intcomma }} ({% widthratio papers_processed_nr papers_nr 100 %}%)</li>
-                <li>Phenotypes with data loaded: {{ phenotypes_nr|intcomma }}</li>
-                <li>Environments with data loaded: {{ conditions_nr|intcomma }}</li>
-                <li>Total datasets: {{ datasets_nr|intcomma }}</li>
+                <li>Data loaded for:</li>
+                    <ul>
+                        <li>Publications: {{ papers_processed_nr|intcomma }} ({% widthratio papers_processed_nr papers_nr 100 %}%)</li>
+                        <li>Phenotypes: {{ phenotypes_nr|intcomma }}</li>
+                        <li>Environments: {{ conditions_nr|intcomma }}</li>
+                        <li>Datasets: {{ datasets_nr|intcomma }} ({{ datasets_nr_hap_hom|intcomma }} haploid/homozygous diploid + {{ datasets_nr_het|intcomma }} heterozygous diploid)</li>
+                    </ul>
             </ul>
 
             <h2>Frequenty Asked Questions (FAQ)</h2>
