--- a/templates/yeastphenome/about.html
+++ b/templates/yeastphenome/about.html
@@ -56,6 +56,7 @@
 
             <ul>
                 <li>Total publications: {{ papers_nr|intcomma }} (+ {{ papers_hopeless_nr|intcomma }} for which data could not be recovered)</li>
+                <li>Total labs who published papers: {{ labs_nr|intcomma }}</li>
                 <li>Data loaded for:</li>
                     <ul>
                         <li>Publications: {{ papers_processed_nr|intcomma }} ({% widthratio papers_processed_nr papers_nr 100 %}%)</li>
