Changed "details" icon

--- a/datasets/templates/datasets/datasets_table.html
+++ b/datasets/templates/datasets/datasets_table.html
@@ -54,7 +54,7 @@
             </td>
 
             <td>
-                <a href="/datasets/{{ dataset.id }}/"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span></a>
+                <a href="/datasets/{{ dataset.id }}/"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
             </td>
         </tr>
 
