Updated field name in Status & fixed bug in Observable2.has_annotated_relevant_descendants

--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -60,7 +60,7 @@
                         {% for x in v %}
                         <tr>
                             <td>{{ x.status_date }}</td>
-                            <td>{{ x.status.status_name|capfirst }}.</td>
+                            <td>{{ x.status.name|capfirst }}.</td>
                         </tr>
                         {% endfor %}
                     </table>
